Backported changes to `1.18.2` branch